<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.addInfo.InfoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/makePlaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/make_place"
        android:textColor="@color/purple_220"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/placeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_name"
        app:layout_constraintTop_toBottomOf="@id/makePlaceText"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="30"
            android:maxLines="1"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="212dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_type"
        app:layout_constraintTop_toBottomOf="@id/placeName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placeTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeOpeningDays"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_opening_days"
        app:layout_constraintTop_toBottomOf="@id/placeType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placeOpeningDaysEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placePhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_phone"
        app:layout_constraintTop_toBottomOf="@id/placeOpeningDays">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placePhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeSite"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_site"
        app:layout_constraintTop_toBottomOf="@id/placePhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placeSiteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="40"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeComment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/place_comment"
        app:layout_constraintTop_toBottomOf="@id/placeSite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/placeCommentEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="60"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="253dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:text="@string/place_image"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeComment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/placeSaveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:padding="0dp"
        android:text="@string/place_save"
        android:textColor="@color/purple_220"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeImage" />

</androidx.constraintlayout.widget.ConstraintLayout>