<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.userProfile.ProfileFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_up_left"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/loginText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_up"
        android:padding="8dp"
        android:text="TextView"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/loginTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mailTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/mail"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/mailText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <TextView
        android:id="@+id/mailText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="TextView"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/mailTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_down_left"
        android:padding="8dp"
        android:text="@string/password"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/passwordText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailTextView" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_down"
        android:padding="8dp"
        android:text="TextView"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/passwordTextView"
        app:layout_constraintTop_toBottomOf="@+id/mailText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/log_out"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>